--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
             srcset="">
         <p class="lead">Eu sou João Miguel_</p>
         <h1>Eu sou aluno de Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
+        <p>Sou Estudante da 2ª Série do Novo Ensino Médio. Tenho a matéria de Programação usando HTML, CSS e Scratch. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
             <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
             <p class="badge bg-secondary">Scratch</p>
         </div>
     </header>
