--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             srcset="">
         <p class="lead">Eu sou João Miguel_</p>
         <h1>Eu sou aluno de Programação</h1>
-        <p>Sou Estudante da 2ª Série do Novo Ensino Médio. Tenho a matéria de Programação usando HTML, CSS e Scratch. Veja os projetos
+        <p>Sou Estudante da 2ª Série do Novo Ensino Médio. Tenho a matéria de Programação uso o HTML, CSS e Scratch. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
